--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -7,21 +7,21 @@
     <div class="form-component">
       <%= label_tag(:make, 'Make ') %>
       <%= select_tag(:make,
-                     options_from_collection_for_select(Make.all, :id, :make),
+                     options_from_collection_for_select(Make.all.uniq, :id, :make),
                      include_blank: true) %>
     </div>
 
         <div class="form-component">
       <%= label_tag(:model, 'Model ') %>
       <%= select_tag(:model,
-                     options_from_collection_for_select(Model.all, :id, :model),
+                     options_from_collection_for_select(Model.all.uniq, :id, :model),
                      include_blank: true) %>
     </div>
 
     <div class="form-component">
       <%= label_tag(:style, 'Style ') %>
       <%= select_tag(:style,
-                     options_from_collection_for_select(Style.all, :id, :body_style),
+                     options_from_collection_for_select(Style.all.uniq, :id, :body_style),
                      include_blank: true, id: 'bicycle-style') %>
 
     </div>
@@ -29,7 +29,7 @@
     <div class="form-component">
       <%= label_tag(:trim, 'Trim ') %>
       <%= select_tag(:trim,
-                     options_from_collection_for_select(Trim.all, :id, :trim_level),
+                     options_from_collection_for_select(Trim.all.uniq, :id, :trim_level),
                      include_blank: true) %>
     </div>
 
